--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col">
           <div class="logo">
             <a href="index.html">
-              <img src="./images//logo/logo.svg" alt="">
+              <img src="./images/logo/logo.svg" alt="">
             </a>
           </div>
         </div>
@@ -66,6 +66,44 @@
       </div>
     </div>
   </header>
+  <section>
+    <div class="container">
+      <div class="box_main">
+        <div class="box_main_title">
+          <h1>Reciente</h1>
+        </div>
+        <div class="box_main_items">
+          <div class="row">
+            <div class="col">
+              <div class="box_main_item">
+                <div class="video"></div>
+                <h2>title</h2>
+                <p>lorem</p>
+                <a href="">ver más</a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="box_main_item">
+                <div class="video"></div>
+                <h2>title</h2>
+                <p>lorem</p>
+                <a href="">ver más</a>
+              </div>
+            </div>
+            <div class="col">
+              <div class="box_main_item">
+                <div class="video"></div>
+                <h2>title</h2>
+                <p>lorem</p>
+                <a href="">ver más</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
