Home parte en 2

--- a/index.html
+++ b/index.html
@@ -77,25 +77,91 @@
             <div class="col">
               <div class="box_main_item">
                 <div class="video"></div>
-                <h2>title</h2>
-                <p>lorem</p>
-                <a href="">ver más</a>
+                <div class="box_main_item_meta">
+                  <div class="title">
+                    <h2>palabra</h2>
+                  </div>
+                  <div class="clicks">
+                    <ul class="list-unstyled list-inline">
+                      <li>
+                        <button>
+                          <i class='bx bx-like'></i>
+                        </button>
+                      </li>
+                      <li>
+                        <button>
+                          <i class='bx bx-bookmark'></i>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="box_main_item_info">
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link">Ver más</a>
+                </div>
               </div>
             </div>
             <div class="col">
               <div class="box_main_item">
                 <div class="video"></div>
-                <h2>title</h2>
-                <p>lorem</p>
-                <a href="">ver más</a>
+                <div class="box_main_item_meta">
+                  <div class="title">
+                    <h2>palabra</h2>
+                  </div>
+                  <div class="clicks">
+                    <ul class="list-unstyled list-inline">
+                      <li>
+                        <button>
+                          <i class='bx bx-like'></i>
+                        </button>
+                      </li>
+                      <li>
+                        <button>
+                          <i class='bx bx-bookmark'></i>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="box_main_item_info">
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link">Ver más</a>
+                </div>
               </div>
             </div>
             <div class="col">
               <div class="box_main_item">
                 <div class="video"></div>
-                <h2>title</h2>
-                <p>lorem</p>
-                <a href="">ver más</a>
+                <div class="box_main_item_meta">
+                  <div class="title">
+                    <h2>palabra</h2>
+                  </div>
+                  <div class="clicks">
+                    <ul class="list-unstyled list-inline">
+                      <li>
+                        <button>
+                          <i class='bx bx-like'></i>
+                        </button>
+                      </li>
+                      <li>
+                        <button>
+                          <i class='bx bx-bookmark'></i>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="box_main_item_info">
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link">Ver más</a>
+                </div>
               </div>
             </div>
 
