Home parte en 3

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                     </ul>
                   </div>
                 </div>
+                <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                  dicta, molestias...
+                </p>
+                <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 <div class="box_main_item_info">
-                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
-                    dicta, molestias...
-                  </p>
-                  <a href="palabra_detalle.html" class="link">Ver más</a>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                   <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
                     dicta, molestias...
                   </p>
-                  <a href="palabra_detalle.html" class="link">Ver más</a>
+                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
               </div>
             </div>
@@ -160,11 +160,10 @@
                   <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
                     dicta, molestias...
                   </p>
-                  <a href="palabra_detalle.html" class="link">Ver más</a>
+                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
