Home parte en 4

--- a/index.html
+++ b/index.html
@@ -167,8 +167,110 @@
           </div>
         </div>
       </div>
+      <div class="box_main">
+        <div class="box_main_title">
+          <h1>Día Palabra</h1>
+        </div>
+        <div class="box_main_items">
+          <div class="row">
+            <div class="col">
+              <div class="box_main_item">
+                <div class="video"></div>
+                <div class="box_main_item_meta">
+                  <div class="title">
+                    <h2>palabra</h2>
+                  </div>
+                  <div class="clicks">
+                    <ul class="list-unstyled list-inline">
+                      <li>
+                        <button>
+                          <i class='bx bx-like'></i>
+                        </button>
+                      </li>
+                      <li>
+                        <button>
+                          <i class='bx bx-bookmark'></i>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                  dicta, molestias...
+                </p>
+                <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                <div class="box_main_item_info">
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="box_main_item">
+                <div class="video"></div>
+                <div class="box_main_item_meta">
+                  <div class="title">
+                    <h2>palabra</h2>
+                  </div>
+                  <div class="clicks">
+                    <ul class="list-unstyled list-inline">
+                      <li>
+                        <button>
+                          <i class='bx bx-like'></i>
+                        </button>
+                      </li>
+                      <li>
+                        <button>
+                          <i class='bx bx-bookmark'></i>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="box_main_item_info">
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="box_main_item">
+                <div class="video"></div>
+                <div class="box_main_item_meta">
+                  <div class="title">
+                    <h2>palabra</h2>
+                  </div>
+                  <div class="clicks">
+                    <ul class="list-unstyled list-inline">
+                      <li>
+                        <button>
+                          <i class='bx bx-like'></i>
+                        </button>
+                      </li>
+                      <li>
+                        <button>
+                          <i class='bx bx-bookmark'></i>
+                        </button>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="box_main_item_info">
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
