--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <div class="row">
         <div class="col">
           <div class="header_textos">
-            <h6>Lorem ipsum, dolor sit amet </h6>
-            <h1>Lorem ipsum, dolor</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+            <h6>Encontrar facílmente una seña para</h6>
+            <h1>Aprender una palabra avanzada</h1>
+            <p>Diccionario de la lengua de seña colombiana</p>
           </div>
           <div class="header_search">
-            <input type="text" class="input_search">
-            <button class="btnSearc">
+            <input type="text" class="input_search form-control shadow-none" placeholder="Buscador una palabra">
+            <button class="btnSearch">
               <i class='bx bx-search'></i>
             </button>
           </div>
