Home parte en 10

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         <div class="box_main_title">
           <h1>Reciente</h1>
         </div>
-        <div class="box_main_items">
+        <div class="box_main_selections">
           <div class="row">
             <div class="col">
-              <div class="box_main_item">
+              <div class="box_selection">
                 <div class="video"></div>
-                <div class="box_main_item_meta">
+                <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
                   </div>
@@ -105,9 +105,9 @@
               </div>
             </div>
             <div class="col">
-              <div class="box_main_item">
+              <div class="box_selection">
                 <div class="video"></div>
-                <div class="box_main_item_meta">
+                <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
                   </div>
@@ -126,7 +126,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="box_main_item_info">
+                <div class="box_selection_info">
                   <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
                     dicta, molestias...
                   </p>
@@ -135,9 +135,9 @@
               </div>
             </div>
             <div class="col">
-              <div class="box_main_item">
+              <div class="box_selection">
                 <div class="video"></div>
-                <div class="box_main_item_meta">
+                <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
                   </div>
@@ -156,7 +156,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="box_main_item_info">
+                <div class="box_selection_info">
                   <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
                     dicta, molestias...
                   </p>
@@ -171,12 +171,12 @@
         <div class="box_main_title">
           <h1>Día Palabra</h1>
         </div>
-        <div class="box_main_items">
+        <div class="box_main_selections">
           <div class="row">
             <div class="col">
-              <div class="box_main_item">
+              <div class="box_selection">
                 <div class="video"></div>
-                <div class="box_main_item_meta">
+                <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
                   </div>
@@ -199,14 +199,14 @@
                   dicta, molestias...
                 </p>
                 <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
-                <div class="box_main_item_info">
+                <div class="box_selection_info">
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="box_main_item">
+              <div class="box_selection">
                 <div class="video"></div>
-                <div class="box_main_item_meta">
+                <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
                   </div>
@@ -225,7 +225,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="box_main_item_info">
+                <div class="box_selection_info">
                   <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
                     dicta, molestias...
                   </p>
@@ -234,9 +234,9 @@
               </div>
             </div>
             <div class="col">
-              <div class="box_main_item">
+              <div class="box_selection">
                 <div class="video"></div>
-                <div class="box_main_item_meta">
+                <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
                   </div>
@@ -255,7 +255,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="box_main_item_info">
+                <div class="box_selection_info">
                   <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
                     dicta, molestias...
                   </p>
