--- a/palabras.html
+++ b/palabras.html
@@ -46,6 +46,321 @@
             <i class='bx bx-search'></i>
           </button>
         </div>
+        <div class="box_palabras_alpha">
+          <ul class="list-unstyled">
+            <li><a href="" class="active">A</a></li>
+            <li><a href="">B</a></li>
+            <li><a href="">C</a></li>
+            <li><a href="">D</a></li>
+            <li><a href="">E</a></li>
+            <li><a href="">F</a></li>
+            <li><a href="">G</a></li>
+            <li><a href="">H</a></li>
+            <li><a href="">I</a></li>
+            <li><a href="">J</a></li>
+            <li><a href="">K</a></li>
+            <li><a href="">L</a></li>
+            <li><a href="">M</a></li>
+            <li><a href="">N</a></li>
+            <li><a href="">Ñ</a></li>
+            <li><a href="">O</a></li>
+            <li><a href="">P</a></li>
+            <li><a href="">Q</a></li>
+            <li><a href="">R</a></li>
+            <li><a href="">S</a></li>
+            <li><a href="">T</a></li>
+            <li><a href="">U</a></li>
+            <li><a href="">V</a></li>
+            <li><a href="">W</a></li>
+            <li><a href="">X</a></li>
+            <li><a href="">Y</a></li>
+            <li><a href="">Z</a></li>
+          </ul>
+        </div>
+        <div class="box_palabras_selections">
+          <div class="box_main_selections">
+            <div class="row">
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  <div class="box_main_item_info">
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="box_selection_info">
+                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
+                      et
+                      dicta, molestias...
+                    </p>
+                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="box_selection_info">
+                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
+                      et
+                      dicta, molestias...
+                    </p>
+                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  <div class="box_main_item_info">
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="box_selection_info">
+                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
+                      et
+                      dicta, molestias...
+                    </p>
+                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="box_selection_info">
+                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
+                      et
+                      dicta, molestias...
+                    </p>
+                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
+                    et
+                    dicta, molestias...
+                  </p>
+                  <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  <div class="box_main_item_info">
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="box_selection_info">
+                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
+                      et
+                      dicta, molestias...
+                    </p>
+                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="box_selection">
+                  <div class="video"></div>
+                  <div class="box_selection_meta">
+                    <div class="title">
+                      <h2>palabra</h2>
+                    </div>
+                    <div class="clicks">
+                      <ul class="list-unstyled list-inline">
+                        <li>
+                          <button>
+                            <i class='bx bx-like'></i>
+                          </button>
+                        </li>
+                        <li>
+                          <button>
+                            <i class='bx bx-bookmark'></i>
+                          </button>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="box_selection_info">
+                    <p class="definition">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur blanditiis
+                      et
+                      dicta, molestias...
+                    </p>
+                    <a href="palabra_detalle.html" class="link"><i class='bx bx-right-arrow-alt'></i>Ver más</a>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
