Home parte en 12

--- a/palabra_detalle.html
+++ b/palabra_detalle.html
@@ -40,7 +40,7 @@
   <section>
     <div class="container">
       <div class="box_palabra_detalle">
-        <div class="box_palabra_detalle_titles d-flex justify-content-center">
+        <div class="box_palabra_detalle_titles">
           <div class="sintaxis">
             <p>adjetivo</p>
           </div>
@@ -60,6 +60,88 @@
                 </button>
               </li>
             </ul>
+          </div>
+        </div>
+        <div class="box_palabra_detalle_definition">
+          <div class="row d-flex g-5">
+            <div class="col-4">
+              <div class="title">
+                <h3>Seña</h3>
+              </div>
+              <div class="video">
+                <div class="lorem_video"><i class='bx bx-play'></i></div>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="title">
+                <h3>Definición</h3>
+              </div>
+              <div class="note">
+                <ul class="list-unstyled">
+                  <li>
+                    <p><span>1</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
+                      doloribus, fugiat
+                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
+                      ipsam optio officia. Nam.</p>
+                  </li>
+                  <li>
+                    <p><span>2</span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
+                      doloribus, fugiat
+                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
+                      ipsam optio officia. Nam.</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="list-simila sinonimos">
+                <ul class="list-unstyled">
+                  <li>palabra</li>
+                  <li>palabra</li>
+                  <li>palabra</li>
+                  <li>palabra</li>
+                </ul>
+              </div>
+              <div class="list-simila antonimos">
+                <ul class="list-unstyled">
+                  <li>palabra</li>
+                  <li>palabra</li>
+                  <li>palabra</li>
+                  <li>palabra</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="box_palabra_detalle_definition">
+          <div class="row d-flex g-5">
+            <div class="col-4">
+              <div class="title">
+                <h3>Aclaracion</h3>
+              </div>
+              <div class="video">
+                <div class="lorem_video"><i class='bx bx-play'></i></div>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="title">
+                <h3>Ejemplo</h3>
+              </div>
+              <div class="ejemplo">
+                <ul class="list-unstyled">
+                  <li>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
+                      doloribus, fugiat
+                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
+                      ipsam optio officia. Nam.</p>
+                  </li>
+                  <li>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos accusamus soluta
+                      doloribus, fugiat
+                      illum dicta, deserunt ex dolores vero dolor maxime necessitatibus iure facilis rem perferendis
+                      ipsam optio officia. Nam.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
