pag parte en 15

--- a/contacto.html
+++ b/contacto.html
@@ -38,7 +38,32 @@
     </div>
   </nav>
   <section>
-
+    <div class="container">
+      <div class="box_contacto">
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-8">
+            <div class="box_contacto_title">
+              <h2>¡Hablemos todo!</h2>
+              <h6>Ponerse en contacto</h6>
+              <p>hola diego</p>
+            </div>
+            <div class="box_contacto_forms">
+              <form class="box_contacto_form">
+                <div class="row">
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                  </div>
+                  <div class="col">
+                    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <footer>
 
