--- a/palabras.html
+++ b/palabras.html
@@ -365,7 +365,54 @@
     </div>
   </section>
   <footer>
-
+    <div class="box_footer_info">
+      <div class="container">
+        <div class="box_footer_info_logo">
+          <img src="./images/logo/logo_blanco.svg" alt="">
+        </div>
+        <div class="box_footer_info_menus">
+          <ul class="d-flex justify-content-center list-unstyled ">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="palabras.html">Palabras</a></li>
+            <li><a href="equipo.html">Equipo</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+        <div class="box_footer_info_redes">
+          <ul class="list-unstyled">
+            <li>
+              <a href="https://www.facebook.com/Makaiaorg" target="_blank">
+                <div class="circle">
+                  <i class='bx bxl-facebook'></i>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/laacademiageek/" target="_blank">
+                <div class="circle">
+                  <i class='bx bxl-twitter'></i>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/laacademiageek/" target="_blank">
+                <div class="circle">
+                  <i class='bx bxl-instagram'></i>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="box_footer_linea"></div>
+    <div class="box_footer_copy">
+      <div class="container">
+        <p>
+          Copyright 2022 MaSignificadoSenante.com | All Rights Reserved. | Hecho en Colombia
+        </p>
+      </div>
+    </div>
   </footer>
 </body>
 
