--- a/contacto.html
+++ b/contacto.html
@@ -41,23 +41,39 @@
     <div class="container">
       <div class="box_contacto">
         <div class="row">
-          <div class="col-4"></div>
+          <div class="col-4">
+            <div class="box_contacto_woman">
+              <img src="./images/banner-right-img.png" alt="">
+              <div class="box_contacto_woman_circles">
+                <span class="circle_1"></span><span class="circle_2"></span><span class="circle_3"></span>
+              </div>
+            </div>
+          </div>
           <div class="col-8">
             <div class="box_contacto_title">
               <h2>¡Hablemos todo!</h2>
               <h6>Ponerse en contacto</h6>
-              <p>hola diego</p>
             </div>
             <div class="box_contacto_forms">
-              <form class="box_contacto_form">
+              <form>
                 <div class="row">
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+                    <input type="text" class="form-control" placeholder="Nombre Completo" aria-label="Nombre Completo">
                   </div>
                   <div class="col">
-                    <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+                    <input type="text" class="form-control" placeholder="E-mail" aria-label="E-mail">
                   </div>
                 </div>
+                <div class="row">
+                  <div class="col-12">
+                    <input type="text" class="form-control" placeholder="Asunto" aria-label="Asunto">
+                  </div>
+                  <div class="col-12">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escribirme"
+                      rows="6"></textarea>
+                  </div>
+                </div>
+                <button type="button" value="Enviar mensaje" class="btn">Enviar mensaje</button>
               </form>
             </div>
           </div>
