--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
           <div class="row">
             <div class="col">
               <div class="box_selection">
-                <div class="video"></div>
+                <div class="box_selection_video">
+                  <video muted class="control_video">
+                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                  </video>
+                </div>
                 <div class="box_selection_meta">
                   <div class="title">
-                    <h2>palabra</h2>
+                    <h2>Combinar</h2>
                   </div>
                   <div class="clicks">
                     <ul class="list-unstyled list-inline">
@@ -320,6 +324,7 @@
     </div>
   </footer>
 
+  <script src="./js/video.js"></script>
 </body>
 
 </html>
