--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
             </div>
             <div class="col">
               <div class="box_selection">
-                <div class="video"></div>
+                <div class="box_selection_video">
+                  <video muted class="control_video">
+                    <source src="./videos/palabra_c/combinar/combinar_sena.mp4" type="video/mp4">
+                  </video>
+                </div>
                 <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
@@ -140,7 +144,11 @@
             </div>
             <div class="col">
               <div class="box_selection">
-                <div class="video"></div>
+                <div class="box_selection_video">
+                  <video muted class="control_video">
+                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                  </video>
+                </div>
                 <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
@@ -179,7 +187,11 @@
           <div class="row">
             <div class="col">
               <div class="box_selection">
-                <div class="video"></div>
+                <div class="box_selection_video">
+                  <video muted class="control_video">
+                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                  </video>
+                </div>
                 <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
@@ -209,7 +221,11 @@
             </div>
             <div class="col">
               <div class="box_selection">
-                <div class="video"></div>
+                <div class="box_selection_video">
+                  <video muted class="control_video">
+                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                  </video>
+                </div>
                 <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
@@ -239,7 +255,11 @@
             </div>
             <div class="col">
               <div class="box_selection">
-                <div class="video"></div>
+                <div class="box_selection_video">
+                  <video muted class="control_video">
+                    <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                  </video>
+                </div>
                 <div class="box_selection_meta">
                   <div class="title">
                     <h2>palabra</h2>
