--- a/equipo.html
+++ b/equipo.html
@@ -45,31 +45,28 @@
             <div class="col-4">
               <div class="box_equipo_companer_img">
                 <div class="img_perfil">
-                  <img
-                    src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                    height="300px" />
+                  <img src="./images/Virginia_Perfil.JPG" height="300px"
+                    style="left: -10px; top: -28px; height: 110%;" />
                   <div class="circle_1"></div>
                 </div>
               </div>
             </div>
             <div class="col-8">
               <div class="box_equipo_companer_info">
-                <h4>Nombre Completo</h4>
-                <h5>FrontEnd</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur voluptatibus ratione enim
-                  veniam necessitatibus, beatae ex. Totam, velit, quaerat reiciendis fugiat, neque non qui beatae facere
-                  distinctio eius natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur
-                  voluptatibus ratione enim
-                  veniam necessitatibus, beatae ex. Totam, velit, quaerat reiciendis fugiat, neque non qui beatae facere
-                  distinctio eius natus.</p>
+                <h4>Virginia Velásquez Soto</h4>
+                <h5>Diseñadora Web / FrontEnd</h5>
+                <p>Soy tecnologa en Gráfica Digital, me fui a estudiar a Argentina hice tres cursos especiales allá,
+                  tengo 10 años de experiencia. He hecho varios diplomados de programación. Soy una persona responsable,
+                  activa, organizada, creativa, me gusta aplicar lo que se y lo que más me encanta es resolverlo
+                  problemas lógicos.</p>
                 <div class="redes">
-                  <a href="#">
-                    <i class='bx bxl-facebook-square'></i>
+                  <a href="mailto: virginiavelasquezsoto@gmail.com">
+                    <i class='bx bxl-gmail'></i>
                   </a>
-                  <a href="#">
+                  <a href="https://twitter.com/VirginiaVeSoto">
                     <i class='bx bxl-twitter'></i>
                   </a>
-                  <a href="#">
+                  <a href="https://www.instagram.com/virginia.creativa/">
                     <i class='bx bxl-instagram'></i>
                   </a>
                 </div>
@@ -81,15 +78,13 @@
           <div class="row d-flex g-5">
             <div class="col-8">
               <div class="box_equipo_companer_info">
-                <h4 class="text-end">Nombre Completo</h4>
+                <h4 class="text-end">Julieta Moya torres</h4>
                 <h5 class="text-end">FrontEnd</h5>
-                <p class="text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur
-                  voluptatibus ratione enim
-                  veniam necessitatibus, beatae ex. Totam, velit, quaerat reiciendis fugiat, neque non qui beatae facere
-                  distinctio eius natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur
-                  voluptatibus ratione enim
-                  veniam necessitatibus, beatae ex. Totam, velit, quaerat reiciendis fugiat, neque non qui beatae facere
-                  distinctio eius natus.</p>
+                <p class="text-end">Vivo en Bogotá. Soy egresada de la Universidad de ECCI, me gradué como tecnologo en
+                  Desarrollo Informático. Poseo conocimientos de javascript, base de datos y Android (Aplicación móvil).
+                  Con la academia geek y profesor aprendí temas como HTML, CSS, bothstrap, github. Todo esto me ha sido
+                  útil, a pesar de que he tenido que esforzarme y practicar, me ha servido para seguir adquiriendo
+                  experiencia sobre programación que es un tema que me fascina.</p>
                 <div class="redes text-end">
                   <a href="#">
                     <i class='bx bxl-facebook-square'></i>
@@ -106,9 +101,7 @@
             <div class="col-4">
               <div class="box_equipo_companer_img">
                 <div class="img_perfil">
-                  <img
-                    src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-                    height="300px" />
+                  <img src="./images/julieta.png" height="320px" style="left: -2px;" />
                   <div class="circle_2"></div>
                 </div>
               </div>
@@ -121,23 +114,19 @@
             <div class="col-4">
               <div class="box_equipo_companer_img">
                 <div class="img_perfil">
-                  <img
-                    src="https://images.unsplash.com/photo-1542974242-cde14af34396?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1474&q=80"
-                    height="300px" />
+                  <img src="./images/jairo.png" height="300px" style="left: 0; top: -38px; height: 140%;" />
                   <div class="circle_1"></div>
                 </div>
               </div>
             </div>
             <div class="col-8 ">
               <div class="box_equipo_companer_info">
-                <h4>Nombre Completo</h4>
+                <h4>Jairo A. Bernúdez Guayacán</h4>
                 <h5>FrontEnd</h5>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur voluptatibus ratione enim
-                  veniam necessitatibus, beatae ex. Totam, velit, quaerat reiciendis fugiat, neque non qui beatae facere
-                  distinctio eius natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi pariatur
-                  voluptatibus ratione enim
-                  veniam necessitatibus, beatae ex. Totam, velit, quaerat reiciendis fugiat, neque non qui beatae facere
-                  distinctio eius natus.</p>
+                <p>Soy ingeniero en sistemas, tengo conocimientos de lógica y javascript, también tengo habilidades para
+                  trabajar en equipo. He trabajado en diferentes empresas y en diferentes cargo: en el área
+                  administrativa, en logística y carpintería. Soy egresado de la Universidad ECCI, mi titulo es de
+                  tecnologo</p>
                 <div class="redes">
                   <a href="#">
                     <i class='bx bxl-facebook-square'></i>
