--- a/equipo.html
+++ b/equipo.html
@@ -121,7 +121,7 @@
             </div>
             <div class="col-8 ">
               <div class="box_equipo_companer_info">
-                <h4>Jairo A. Bernúdez Guayacán</h4>
+                <h4>Jairo A. Bermúdez Guayacán</h4>
                 <h5>FrontEnd</h5>
                 <p>Soy ingeniero en sistemas, tengo conocimientos de lógica y javascript, también tengo habilidades para
                   trabajar en equipo. He trabajado en diferentes empresas y en diferentes cargo: en el área
