--- a/palabras.html
+++ b/palabras.html
@@ -82,7 +82,11 @@
             <div class="row">
               <div class="col-4">
                 <div class="box_selection">
-                  <div class="video"></div>
+                  <div class="box_selection_video">
+                    <video muted class="control_video">
+                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    </video>
+                  </div>
                   <div class="box_selection_meta">
                     <div class="title">
                       <h2>palabra</h2>
@@ -112,7 +116,11 @@
               </div>
               <div class="col-4">
                 <div class="box_selection">
-                  <div class="video"></div>
+                  <div class="box_selection_video">
+                    <video muted class="control_video">
+                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    </video>
+                  </div>
                   <div class="box_selection_meta">
                     <div class="title">
                       <h2>palabra</h2>
@@ -143,7 +151,11 @@
               </div>
               <div class="col-4">
                 <div class="box_selection">
-                  <div class="video"></div>
+                  <div class="box_selection_video">
+                    <video muted class="control_video">
+                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    </video>
+                  </div>
                   <div class="box_selection_meta">
                     <div class="title">
                       <h2>palabra</h2>
@@ -174,7 +186,11 @@
               </div>
               <div class="col-4">
                 <div class="box_selection">
-                  <div class="video"></div>
+                  <div class="box_selection_video">
+                    <video muted class="control_video">
+                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    </video>
+                  </div>
                   <div class="box_selection_meta">
                     <div class="title">
                       <h2>palabra</h2>
@@ -204,7 +220,11 @@
               </div>
               <div class="col-4">
                 <div class="box_selection">
-                  <div class="video"></div>
+                  <div class="box_selection_video">
+                    <video muted class="control_video">
+                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    </video>
+                  </div>
                   <div class="box_selection_meta">
                     <div class="title">
                       <h2>palabra</h2>
@@ -235,7 +255,11 @@
               </div>
               <div class="col-4">
                 <div class="box_selection">
-                  <div class="video"></div>
+                  <div class="box_selection_video">
+                    <video muted class="control_video">
+                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    </video>
+                  </div>
                   <div class="box_selection_meta">
                     <div class="title">
                       <h2>palabra</h2>
@@ -266,7 +290,11 @@
               </div>
               <div class="col-4">
                 <div class="box_selection">
-                  <div class="video"></div>
+                  <div class="box_selection_video">
+                    <video muted class="control_video">
+                      <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                    </video>
+                  </div>
                   <div class="box_selection_meta">
                     <div class="title">
                       <h2>palabra</h2>
