--- a/palabra_detalle.html
+++ b/palabra_detalle.html
@@ -68,8 +68,10 @@
               <div class="title">
                 <h3>Seña</h3>
               </div>
-              <div class="video">
-                <div class="lorem_video"><i class='bx bx-play'></i></div>
+              <div class="box_selection_video">
+                <video muted class="control_video">
+                  <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                </video>
               </div>
             </div>
             <div class="col-8">
@@ -115,10 +117,12 @@
           <div class="row d-flex g-5">
             <div class="col-4">
               <div class="title">
-                <h3>Aclaracion</h3>
+                <h3>Aclaración</h3>
               </div>
-              <div class="video">
-                <div class="lorem_video"><i class='bx bx-play'></i></div>
+              <div class="box_selection_video">
+                <video muted class="control_video">
+                  <source src="./videos/palabra_c/combinar/combinar_definicion.mp4" type="video/mp4">
+                </video>
               </div>
             </div>
             <div class="col-8">
